# gerritbot

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  MANIFEST.in  README  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst
gerritbot/: bot.py  version.py
gerritbot/tests/unit/: test_bot.py
tools/: pip-requires  test-requires
